# bazelings

./: .bazelrc  GEMINI.md  MODULE.bazel  README.md  TODO.md
exercises/: BUILD.bazel  exercises.bzl
exercises/00_basics/00_intro/: BUILD.bazel  README.md
exercises/00_basics/01_basic_cc_binary/: README.md
exercises/00_basics/03_sharing_code_with_libraries/: BUILD.bazel  README.md  library.hh
exercises/00_basics/04_labels_in_main_workspace/: BUILD.bazel  README.md
exercises/00_basics/04_labels_in_main_workspace/data/words/: BUILD.bazel
exercises/00_basics/05_grouping_and_matching_files/: BUILD.bazel
exercises/00_basics/06_legacy_macros_and_load_statements/: README.md
exercises/00_basics/06_starlark_legacy_macros/: BUILD.bazel  README.md  macro.bzl
exercises/00_intro/: README.md
exercises/01_basic_cc_binary/: BUILD.bazel  README.md
exercises/01_rules/00_a_little_starlark/: 01_core.bzl  BUILD.bazel  README.md
exercises/01_rules/01_symbolic_macros/: README.md
exercises/01_rules/02_rules_and_providers/: BUILD.bazel  README.md  defs.bzl
exercises/01_rules/05_running_actions/: BUILD.bazel
exercises/01_rules/06_test_rules/: README.md
exercises/02_basic_cc_test/: README.md
exercises/03_sharing_code_with_libraries/: BUILD.bazel  README.md  library.cc  main.cc  test.cc
exercises/04_labels_in_main_workspace/: BUILD.bazel  README.md
exercises/04_labels_in_main_workspace/data/characters/: BUILD.bazel
exercises/05_grouping_and_matching_files/: BUILD.bazel  README.md
exercises/06_legacy_macros_and_load_statements/: README.md
exercises/06_starlark_legacy_macros/: BUILD.bazel
exercises/07_visibility/: README.md
exercises/08_a_little_starlark/: README.md
exercises/09_symbolic_macros/: BUILD.bazel  README.md
exercises/10_rules_and_providers/: README.md
exercises/11_rules_managing_files/: README.md
exercises/12_rules_actions/: README.md
tools/: BUILD.bazel  create_lesson.py  find_bazel.py
