load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("defs.bzl", "cast", "spell")

spell(
    name = "fireball",
    mana_cost = 42,
)

cast(
    name = "kaboom",
    spell = "fireball",
    mana = 10,
    deps = [":fireball"],
)

build_test(
    name = "kaboom_test",
    targets = [
        ":kaboom",
    ],
)